# crucible_inventory_shell

./: .gitignore  README.md  pyproject.toml
crucible_inventory/: __init__.py  exceptions.py  host.py  inventory.py  registry.py  services.py
crucible_shell/: __init__.py  __main__.py  shell.py
crucible_shell/commands/: add.py  discover.py
crucible_shell/entities/: __init__.py  entities.py  services.py
nocturnal_shell/: command.py  completions.py  default_commands.py  exceptions.py  guide.py  logging.py  shell.py
tests/: conftest.py  test_command.py  test_services.py
tests/crucible_inventory/: test_services.py
tests/crucible_shell/: conftest.py  test_command.py  test_services.py
tests/nocturnal_shell/: conftest.py  test_command.py  test_shell.py
