[tool.poetry]
name = "crucible_inventory_shell"
version = "0.1.0"
description = "A shell to help with creating a crucible inventory file"
authors = ["Michele Costa <micosta@redhat.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.22"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
